Science BibTex Files
to format the refs “a la Science”

--- a/bib/lit.bib
+++ b/bib/lit.bib
@@ -1,5 +1,46 @@
 % This file was created with JabRef 2.9.2.
 % Encoding: UTF8
+@article{Geldner:2009bc,
+author = {Geldner, Niko and D{\'e}nervaud-Tendon, Val{\'e}rie and Hyman, Derek L and Mayer, Ulrike and Stierhof, York-Dieter and Chory, Joanne},
+title = {{Rapid, combinatorial analysis of membrane compartments in intact plants with a multicolor marker set.}},
+year = {2009},
+volume = {59},
+number = {1},
+pages = {169--178},
+month = jul
+}
+
+@article{Grefen:2010ho,
+author = {Grefen, Christopher and Donald, Naomi and Schumacher, Karin and Blatt, Michael R},
+title = {{A Ubiquitin-10 promoter-based vector set for fluorescent protein tagging facilitates temporal stability and native protein distribution in transient and stable expression studies.}},
+year = {2010},
+volume = {64},
+number = {2},
+pages = {355--365},
+month = jul
+}
+
+@article{DeRybel:2010ic,
+author = {De Rybel, Bert and Vassileva, Valya and Parizot, Boris and Demeulenaere, Marlies and Grunewald, Wim and Audenaert, Dominique and Van Campenhout, Jelle and Overvoorde, Paul and Jansen, Leentje and Vanneste, Steffen and M{\"o}ller, Barbara and Wilson, Michael and Holman, Tara and Van Isterdael, Gert and Brunoud, G{\'e}raldine and Vuylsteke, Marnik and Vernoux, Teva and De Veylder, Lieven and Inz{\'e}, Dirk and Weijers, Dolf and Bennett, Malcolm J and Beeckman, Tom},
+title = {{A novel aux/IAA28 signaling cascade activates GATA23-dependent specification of lateral root founder cell identity.}},
+journal = {Current Biology},
+year = {2010},
+volume = {20},
+number = {19},
+pages = {1697--1706},
+month = oct
+}
+
+@article{Lucas11032013,
+author = {Lucas, Mika{\"e}l and Kenobi, Kim and von Wangenheim, Daniel and VO$\beta$, Ute and Swarup, Kamal and De Smet, Ive and Van Damme, Dani{\"e}l and Lawrence, Tara and P{\'e}ret, Benjamin and Moscardi, Eric and Barbeau, Daniel and Godin, Christophe and Salt, David and Guyomarc'h, Soazig and Stelzer, Ernst H K and Maizel, Alexis and Laplaze, Laurent and Bennett, Malcolm J},
+title = {{Lateral root morphogenesis is dependent on the mechanical properties of the overlaying tissues.}},
+journal = {Proc Natl Acad Sci U S A},
+year = {2013},
+volume = {110},
+number = {13},
+pages = {5229--5234},
+month = mar
+}
 
 @ARTICLE{assfalg_et_al_2008,
   author = {A{\ss}falg, Johannes and Kriegel, Hans P. and Kr{\"{o}}ger, Peer
