Update to the reference list
fixed some errors in the records I added

--- a/bib/lit.bib
+++ b/bib/lit.bib
@@ -3,6 +3,7 @@
 @article{Geldner:2009bc,
 author = {Geldner, Niko and D{\'e}nervaud-Tendon, Val{\'e}rie and Hyman, Derek L and Mayer, Ulrike and Stierhof, York-Dieter and Chory, Joanne},
 title = {{Rapid, combinatorial analysis of membrane compartments in intact plants with a multicolor marker set.}},
+journal = {The Plant Journal},
 year = {2009},
 volume = {59},
 number = {1},
@@ -13,6 +14,7 @@ month = jul
 @article{Grefen:2010ho,
 author = {Grefen, Christopher and Donald, Naomi and Schumacher, Karin and Blatt, Michael R},
 title = {{A Ubiquitin-10 promoter-based vector set for fluorescent protein tagging facilitates temporal stability and native protein distribution in transient and stable expression studies.}},
+journal = {The Plant Journal},
 year = {2010},
 volume = {64},
 number = {2},
