--- a/suppMat.tex
+++ b/suppMat.tex
@@ -270,21 +270,21 @@ We colour-coded the nodes in the lineage tree representation based on the corres
 \subsubsection{Periclinal Division Sequences}
 \label{sec:treeDivisionSequence}
 \noindent
-Periclinal divisions are responsible for the layer organisations in the lateral root. We generated a tree division sequence visualisation to focus on these periclinal divisions (see Figure~\ref{fig:treeDivisionSequenceSample}).
+Periclinal divisions are responsible for the layer organisations in the lateral root. We generated a division sequence tree to focus on these periclinal divisions (see Figure~\ref{fig:treeDivisionSequenceSample}).
 %
 \begin{figure}[htbp]
 	\begin{center}
 		\begin{overpic}[width=0.8\linewidth]{images/treeDivisionSequenceSample.pdf}
 		\end{overpic}
-\caption[Tree division sequence visualisation.]
+\caption[Division sequence tree.]
 {
-{\bf Tree division sequence visualisation for dataset $\#120830$.}
+{\bf Division sequence tree for dataset $\#120830$.}
 }
 	\label{fig:treeDivisionSequenceSample}
 	\end{center}
 \end{figure}
 %
-Through this, we are able to analyse the temporal layer organisation in a dataset and can compare it with other datasets. The layer assignment is given by a unique sequence (colour) and each dataset starts in a single layer (\textbf{0}). When a cell performs a periclinal division, its daughter cells are assigned to an outer (initially \textbf{01}) and an inner layer (initially \textbf{02}) with further layer generations in later time steps. This spatial layer organisation is rendered along the number of time steps. By this, we can easily detect when new layers are generated resulting in the identification of the high-order pattern of periclinal divisions for each dataset. The visualisation of the lineage trees as well as the tree division sequences are done in \textit{scifer}. The tree division sequences for all datasets are shown in Figure~\ref{fig:treeDivisionSequences}.
+Through this, we are able to analyse the temporal layer organisation in a dataset and can compare it with other datasets. The layer assignment is given by a unique sequence (colour) and each dataset starts in a single layer (\textbf{0}). When a cell performs a periclinal division, its daughter cells are assigned to an outer (initially \textbf{01}) and an inner layer (initially \textbf{02}) with further layer generations in later time steps. This spatial layer organisation is rendered along the number of time steps. By this, we can easily detect when new layers are generated resulting in the identification of the high-order pattern of periclinal divisions for each dataset. The division sequence trees for all datasets are shown in Figure~\ref{fig:treeDivisionSequences}. The visualisation of the lineage trees as well as the division sequence trees are done in \textit{scifer}.
 
 \section{Quantification and Visualisation of Lateral Root Deformation}
 \noindent
@@ -640,15 +640,15 @@ In the model, a total random configuration of cell division lines may result in 
 
 \subsection{Visualisation and Comparison of Division Behaviour}
 \noindent
-We can run several samples of the model using division rules that include a randomized factor with each resulting in one tree division sequence visualisation as explained in section~\ref{sec:treeDivisionSequence}. However, we want to visually check how often and where the high-order pattern of periclinal divisions is preserved among several runs. This allows us to use statistically solid results of the model to compare them with the real-world datasets. For this purpose, we modify the visualisation of the tree division sequences. Let $l$ be the sequence length for a generated layer (e.g.\ $l=3$ for $012$). We replace the x-axis showing the time steps by a fixed temporal layout of the tree in which the pair of upper concurrently generated layers (with identical number sequence except for the last number) always occur first (slight translation to the left) with respect to its lower layers with almost the same division sequence (except for the $(l-1)$-th number). For example, the pair of layers $0111/0112$ are combined because their sequence only differ in the last number. This pair is compared with the pair $0121/0122$ because they differ in the third ($l-1 = 4-1 = 3$) position of the sequence. For each such a comparison we render a rectangle that includes these two pairs of layers and is coloured by red or green. The rectangle is green if in more than $50 \%$ of the model samples the upper layer occurred first with respect to the lower one else it is red. This allows an immediate visual feedback of the high-order pattern while detailed information about the percentage and number of possible comparisons are given in the mid of each rectangle (see Figure~\ref{fig:averagedTreeDivisionSequence}). A comparison is not possible in a model when only one pair of layers is generated or none at all.
+We can run several samples of the model using division rules that include a randomized factor with each resulting in one division sequence tree as explained in section~\ref{sec:treeDivisionSequence}. However, we want to visually check how often and where the high-order pattern of periclinal divisions is preserved among several runs. This allows us to use statistically solid results of the model to compare them with the real-world datasets. For this purpose, we modify the visualisation of the division sequence trees. Let $l$ be the sequence length for a generated layer (e.g.\ $l=3$ for $012$). We replace the x-axis showing the time steps by a fixed temporal layout of the tree in which the pair of upper concurrently generated layers (with identical number sequence except for the last number) always occur first (slight translation to the left) with respect to its lower layers with almost the same division sequence (except for the $(l-1)$-th number). For example, the pair of layers $0111/0112$ are combined because their sequence only differ in the last number. This pair is compared with the pair $0121/0122$ because they differ in the third ($l-1 = 4-1 = 3$) position of the sequence. For each such a comparison we render a rectangle that includes these two pairs of layers and is coloured by red or green. The rectangle is green if in more than $50 \%$ of the model samples the upper layer occurred first with respect to the lower one else it is red. This allows an immediate visual feedback of the high-order pattern while detailed information about the percentage and number of possible comparisons are given in the mid of each rectangle (see Figure~\ref{fig:averagedTreeDivisionSequence}). A comparison is not possible in a model when only one pair of layers is generated or none at all.
 %
 \begin{figure}[htbp]
 	\begin{center}
 		\begin{overpic}[width=0.5\linewidth]{images/averagedTreeDivisionSequence.pdf}
 		\end{overpic}
-\caption[Averaged tree division sequence visualisation.]
+\caption[Averaged division sequence tree.]
 {
-{\bf Averaged tree division sequence visualisation with three comparisons of high-order pattern. In only $48 \%$ of the $100$ comparisons the upper layers were generated before the lower ones resulting in a red rectangle. In the other two cases with fewer comparisons ($81$ and $92$), more than $74 \%$ of the upper layers were generated first and green rectangles are drawn.}
+{\bf Averaged division sequence tree with three comparisons of high-order pattern. In only $48 \%$ of the $100$ comparisons the upper layers were generated before the lower ones resulting in a red rectangle. In the other two cases with fewer comparisons ($81$ and $92$), more than $74 \%$ of the upper layers were generated first and green rectangles are drawn.}
 }
 	\label{fig:averagedTreeDivisionSequence}
 	\end{center}
@@ -797,9 +797,9 @@ We can run several samples of the model using division rules that include a rand
 	\begin{center}
 		\begin{overpic}[width=1.\linewidth]{images/treeDivisionSequences.pdf}
 		\end{overpic}
-\caption[Tree division sequence for all five datasets.]
+\caption[Division sequence trees for all five datasets.]
 {
-{\bf Tree division sequences for all five datasets.} The x-axis corresponds to the number of cells. The colours are uniquely assigned to each type of layering which is given by a sequence of the divisions.}
+{\bf Division sequence trees for all five datasets.} The x-axis corresponds to the number of cells. The colours are uniquely assigned to each type of layering which is given by a sequence of the divisions.}
 	\label{fig:treeDivisionSequences}
 	\end{center}
 \end{figure}
