Fixed some cosmetic stuff

--- a/suppMat.tex
+++ b/suppMat.tex
@@ -229,7 +229,7 @@ In a nutshell, for each time step, 3D surfaces are constructed using the set of 
 		\end{overpic}
 \caption[Approximation of the lateral root using $\alpha$-shapes.]
 {
-{\bf Top: Nuclei of last time step for dataset $\# 130607$ in front, side and radial view. Bottom: Approximation of the lateral root using $\alpha$-shapes.}
+{\bf Top:} Nuclei of last time step for dataset $\# 130607$ in front, side and radial view. {\bf Bottom:} Approximation of the lateral root using $\alpha$-shapes.
 }
 	\label{fig:alphaShapes}
 	\end{center}
@@ -243,7 +243,7 @@ However, when using a single surface to represent the whole virtual lateral root
 		\end{overpic}
 \caption[Surface generation for automatic classification of division types.]
 {
-{\bf Top: After a  \textcolor{green}{\textbf{periclinal}} division the outer daughter cell is assigned to a new surface with blue colour. Bottom: Example situation in which two $\alpha$-shapes are generated.}
+{\bf Top:} After a  \textcolor{green}{\textbf{periclinal}} division the outer daughter cell is assigned to a new surface with blue colour. {\bf Bottom:} Example situation in which two $\alpha$-shapes are generated.
 }
 	\label{fig:newSurfaceGeneration}
 	\end{center}
@@ -333,7 +333,7 @@ M = \langle m \rangle = \langle l \otimes l \rangle =
 		\end{overpic}
 \caption[Deformation computation and representation.]
 {
-{\bf Left: 2D example of \textcolor{blue}{conserved}, \textcolor{red}{appearing} and \textcolor{green}{disappearing} links between two time steps due two a cell division. Right: Deformation is represented by the axes of an ellipse.}
+{\bf Left:} 2D example of \textcolor{blue}{conserved}, \textcolor{red}{appearing} and \textcolor{green}{disappearing} links between two time steps due two a cell division. {\bf Right:} Deformation is represented by the axes of an ellipse.
 }
 	\label{fig:ellipseDeformation}
 	\end{center}
@@ -390,7 +390,7 @@ The usage of the floor function performs a rounding of $s(i)$ to the nearest int
 		\end{overpic}
 \caption[Spatial registration of datasets.]
 {
-{\bf Top: Generation of front, side and radial views according to centre of mass (black node) and principal components. Bottom: Manual fitting based on convex hulls of datasets: \textcolor{magenta}{$\#120830$}, \textcolor{yellow}{$\#121204$}, \textcolor{red}{$\#121211$}, \textcolor{green}{$\#130508$}, \textcolor{blue}{$\#130607$}.}
+{\bf Top:} Generation of front, side and radial views according to centre of mass (black node) and principal components. {\bf Bottom:} Manual fitting based on convex hulls of datasets: \textcolor{magenta}{$\#120830$}, \textcolor{yellow}{$\#121204$}, \textcolor{red}{$\#121211$}, \textcolor{green}{$\#130508$}, \textcolor{blue}{$\#130607$}.
 }
 	\label{fig:spatialRegistration}
 	\end{center}
@@ -415,7 +415,7 @@ Through this, each tile represents an averaged deformation that is represented b
 		\end{overpic}
 \caption[Averaging over datasets and visualisation of deformation information.]
 {
-{\bf Left: Example of how the deformation information of all datasets is averaged using a grid approach. Right: Visualisation of averaged deformation information by colour-coded lines according to magnitude values given in Table~\ref{tab:deformationParameters} and ``bow ties' 'over all datasets in side view. The contour shows the convex hull using a B\'ezier curve.}
+{\bf Left:} Example of how the deformation information of all datasets is averaged using a grid approach. {\bf Right:} Visualisation of averaged deformation information by colour-coded lines according to magnitude values given in Table~\ref{tab:deformationParameters} and ``bow ties'' over all datasets in side view. The contour shows the convex hull using a B\'ezier curve.
 }
 	\label{fig:gridDeformation}
 	\end{center}
@@ -538,7 +538,7 @@ with the control points $c_{i,j} \in S_{cur}$ and $t \in [0,1]$ as the temporal 
 		\end{overpic}
 \caption[Initial and final B\'ezier surface of degree $(6, 6)$ for the generalized model.]
 {
-{\bf Initial and final B\'ezier surface of degree $(6, 6)$ for the generalized model. The mapping of $(u_i, v_i)$ to the changing position on the surface is unique over time.}
+{\bf Initial and final B\'ezier surface of degree $(6, 6)$ for the generalized model.} The mapping of $(u_i, v_i)$ to the changing position on the surface is unique over time.
 }
 	\label{fig:modelSurface}
 	\end{center}
@@ -627,7 +627,7 @@ The last scenario is considering a random rule but preserving almost equal area 
 		\end{overpic}
 \caption[Cell Shape Preservation.]
 {
-{\bf Cell Shape Preservation:} For each division line through the centre of mass rotated by an user-selected angle $\alpha$, a length check of the connected cell walls is applied. For this purpose, the two interconnection nodes $u$ and $v$ as well as the adjacent junctions $u_1, u_2$ and $v_1, v_2$ are determined. From these positions the lengths $a, b, c, d$ and the cell wall lengths $a+b$ and $c+d$ are computed. It is now checked in four cases if $a < (a+b)\cdot \delta$, $b < (a+b)\cdot \delta$, $c < (c+d)\cdot \delta$, or $d < (c+d)\cdot \delta$. If only one statement is false then this division line orientation is omitted. The user-selected value $\delta$ is in $[0,1]$ and denotes the percentage that a sub-line must have with respect to the total call wall length.
+{\bf Cell Shape Preservation.} For each division line through the centre of mass rotated by an user-selected angle $\alpha$, a length check of the connected cell walls is applied. For this purpose, the two interconnection nodes $u$ and $v$ as well as the adjacent junctions $u_1, u_2$ and $v_1, v_2$ are determined. From these positions the lengths $a, b, c, d$ and the cell wall lengths $a+b$ and $c+d$ are computed. It is now checked in four cases if $a < (a+b)\cdot \delta$, $b < (a+b)\cdot \delta$, $c < (c+d)\cdot \delta$, or $d < (c+d)\cdot \delta$. If only one statement is false then this division line orientation is omitted. The user-selected value $\delta$ is in $[0,1]$ and denotes the percentage that a sub-line must have with respect to the total call wall length.
 }
 	\label{fig:shapePreserving}
 	\end{center}
@@ -648,7 +648,7 @@ We can run several samples of the model using division rules that include a rand
 		\end{overpic}
 \caption[Averaged division sequence tree.]
 {
-{\bf Averaged division sequence tree with three comparisons of high-order pattern. In only $48 \%$ of the $100$ comparisons the upper layers were generated before the lower ones resulting in a red rectangle. In the other two cases with fewer comparisons ($81$ and $92$), more than $74 \%$ of the upper layers were generated first and green rectangles are drawn.}
+{\bf Averaged division sequence tree.} In only $48 \%$ of the $100$ comparisons in total, the upper layers were generated before the lower ones resulting in a red rectangle. In the other two cases with fewer comparisons ($81$ and $92$), more than $74 \%$ of the upper layers were generated first and green rectangles are drawn.
 }
 	\label{fig:averagedTreeDivisionSequence}
 	\end{center}
