--- a/suppMat.tex
+++ b/suppMat.tex
@@ -735,7 +735,7 @@ We can run several samples of the model using division rules that include a rand
 		\end{overpic}
 \caption[Visual analysis of division behaviour of all cell lineages located in the master cell file.]
 {
-{\bf Visual analysis of division behaviour of all cell lineages located in the master cell file. The left labels show the time steps and an additional one at the top of each tree displays the total number of divisions. The colour of the nodes indicates the kind of division: \textcolor{red}{anticlinal}, \textcolor{green}{periclinal} and \textcolor{blue}{radial}.}
+{\bf Visual analysis of division behaviour of all cell lineages located in the master cell file.} The left labels show the time steps and an additional one at the top of each tree displays the total number of divisions. The colour of the nodes indicates the kind of division: \textcolor{red}{anticlinal}, \textcolor{green}{periclinal} and \textcolor{blue}{radial}.
 }
 	\label{fig:allMasterTrees}
 	\end{center}
@@ -749,7 +749,7 @@ We can run several samples of the model using division rules that include a rand
 		\end{overpic}
 \caption[All cell lineages of our five datasets.]
 {
-{\bf All cell lineages of our five datasets. The left labels show the time steps and an additional one at the top of each tree displays the total number of divisions. The colour of the nodes indicates the kind of division: \textcolor{red}{anticlinal}, \textcolor{green}{periclinal} and \textcolor{blue}{radial}. The bricks visualisation at the bottom of each tree allows a comparison of division sequences among several trees.}
+{\bf All cell lineages of our five datasets.} The left labels show the time steps and an additional one at the top of each tree displays the total number of divisions. The colour of the nodes indicates the kind of division: \textcolor{red}{anticlinal}, \textcolor{green}{periclinal} and \textcolor{blue}{radial}. The bricks visualisation at the bottom of each tree allows a comparison of division sequences among several trees.
 }
 	\label{fig:allTrees}
 	\end{center}
