--- a/suppMat.tex
+++ b/suppMat.tex
@@ -653,13 +653,13 @@ For this purpose, we modify the visualisation of the division sequence trees. Le
 \renewcommand{\thetable}{S\@arabic\c@table}
 \makeatother
 %
-
+\TODO{fix format and floating}
 % more space between rows
 \renewcommand{\arraystretch}{1.2}
 %
 \begin{table}
 	\begin{center}
-		\begin{tabular}[!htbp]{@{}lccccccc@{}}
+		\begin{tabular}[h]{@{}lccccccc@{}}
 		\toprule
 		Event & $\#120830$ & $\#121204$ & $\#121211$ & $\#130508$ & $\#130607$ & Average & SD\\
 		\midrule
@@ -677,11 +677,10 @@ For this purpose, we modify the visualisation of the division sequence trees. Le
 \end{table}
 %
 
-\vspace{1cm}
 %
 \begin{table}
 	\begin{center}
-		\begin{tabular}[!htbp]{@{}llc@{}}
+		\begin{tabular}[h]{@{}llc@{}}
 		\toprule
 		View & Cell File & [Min, Max] deformation in $\boldsymbol{\nicefrac{\mu m}{min}}$\\
 		\midrule
@@ -696,6 +695,44 @@ For this purpose, we modify the visualisation of the division sequence trees. Le
 	\label{tab:deformationParameters}
 \end{table}
 %
+
+%
+\begin{sidewaystable}\centering
+\begin{tabular}{@{}lccccccccccc@{}}\toprule
+& \multicolumn{5}{c}{Data-driven models} & \phantom{abc}& \multicolumn{5}{c}{Idealized models}\\
+\cmidrule{2-6} \cmidrule{8-12}
+& $\#120830$ & $\#121204$ & $\#121211$ & $\#130508$ & $\#130607$ && BD & D & PDG & R & RE\\ \midrule
+\textbf{NH}\\
+Area ratio & 0.098 & 0.080 & 0.100 & 0.129 & 0.118 && 0.320 & & & 0.308 & 0.308\\
+Average Cells & 63.8 & 47.1 & 82.2 & 42.4 & 82.3 && 59.8 & & & 65.9 & 66.4\\
+Average AD & 29.6 & 24.9 & 28.1 & 21.0 & 36.6 && 19.6 & & & 30.6 & 34.0\\
+Average PD & 32.1 & 20.2 & 49.1 & 20.4 & 42.7 && 38.1 & & & 33.2 & 30.3\\
+\textbf{1DC}\\
+Area Ratio & 0.070 & 0.070 & 0.034 & 0.035 & 0.095 && 0.420 & & & &\\
+Average Cells & 63.5 & 48.5 & 81.6 & 46.2 & 81.4 && 66.6 & & & &\\
+Average AD & 30.2 & 23.4 & 32.5 & 20.1 & 38.1 && 18.3 & & & &\\
+Average PD & 31.3 & 23.0 & 47.1 & 24.1 & 41.3 && 46.3 & & & &\\
+\textbf{2DC}\\
+Area Ratio & 0.078 & 0.060 & 0.048 & 0.047 & 0.054 && 0.450 & & & &\\
+Average Cells & 61.9 & 48.3 & 79.1 & 45.1 & 86.5 && & & & &\\
+Average AD & 32.1 & 27.3 & 33.3 & 22.5 & 42.3 && & & & &\\
+Average PD & 27.8 & 19.0 & 43.8 & 20.5 & 42.1 && & & & &\\
+\textbf{2DCBase}\\
+Area Ratio & & & & & && 0.450 & & & &\\
+Average Cells & & & & & && 62.5 & & & &\\
+Average AD & & & & & && 18.0 & & & &\\
+Average PD & & & & & && 42.4 & & & &\\
+\textbf{Real Data}\\
+Cells & 64 & 49 & 81 & 45 & 82 && & & & &\\
+AD & 31 & 21 & 25 & 18 & 27 && & & & &\\
+PD & 23 & 19 & 36 & 19 & 39 && & & & &\\
+RD & 8 & 7 & 15 & 7 & 13 && & & & &\\
+\bottomrule
+\end{tabular}
+	\caption[Parameters for data-driven and idealized models.]{\textbf{Parameters for data-driven and idealized models.} The table lists the average number of cells, anticlinal (AD) and periclinal divisions (PD) for each model setting performing 100 runs. NH, 1DC, 2DC and 2DCBase describe the different hard-wired division settings in the model. At the bottom, the number of cells and divisions are given for the real-world datasets.
+	}
+	\label{tab:modelParameters}
+\end{sidewaystable}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % SUPP FIGURES
